--- a/src/app/salvar/salvar.component.html
+++ b/src/app/salvar/salvar.component.html
@@ -32,7 +32,7 @@
 
   <ion-item>
     <ion-label position="floating">Telefone</ion-label>
-    <ion-input type="number" [(ngModel)]="contato.telefone"></ion-input>
+    <ion-input type="tel" [(ngModel)]="contato.telefone"></ion-input>
   </ion-item>
 
 </ion-content>    
